Correções nos botões, importação das fontes e avanço no card de produtos

--- a/componentes/botoes/botoes.css
+++ b/componentes/botoes/botoes.css
@@ -4,23 +4,19 @@ body {
 
 /* Estilo de todos os botões */
 .btn-mvp {
-    width: 132px;
-    height: 28px;
-    padding: 3.5px;
+    font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 9px;
-    font-weight: 800;
+    text-align: center;
+    font-size: 1rem;
     color: #EFEFEF;
 } 
 
-.btn-mvp:hover {
-    width: 135px;
-    height: 31px;
+.btn-mvp:hover, .btn-mvp:focus-within {
+    box-shadow: none !important;  
     transition: 0.5s;
-    background-color: #181818; /* ALTERAR O BACKGROUND-COLOR SE ADICIONAR EM UMA DIV COM COR DIFERENTE DE #181818  */
-    color: #FD4712;
-    border-color: #FD4712;
+    background-color: #181818 !important; /* ALTERAR O BACKGROUND-COLOR SE ADICIONAR EM UMA DIV COM COR DIFERENTE DE #181818  */
+    color: #FD4712 !important;
+    border-color: #FD4712 !important;
     border-width: 2px;
 }
 
