--- a/componentes/botoes/botoes.css
+++ b/componentes/botoes/botoes.css
@@ -1,7 +1,3 @@
-body {
-    background-color: #181818;
-}
-
 /* Estilo de todos os botões */
 .btn-mvp {
     font-weight: 700;
@@ -14,7 +10,7 @@ body {
 .btn-mvp:hover, .btn-mvp:focus-within {
     box-shadow: none !important;  
     transition: 0.5s;
-    background-color: #181818 !important; /* ALTERAR O BACKGROUND-COLOR SE ADICIONAR EM UMA DIV COM COR DIFERENTE DE #181818  */
+    background-color: #28004F !important; /* ALTERAR O BACKGROUND-COLOR SE ADICIONAR EM UMA DIV COM COR DIFERENTE DE #181818  */
     color: #FD4712 !important;
     border-color: #FD4712 !important;
     border-width: 2px;
