--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,10 +2,12 @@
 
 body {
     font-family: 'Saira', sans-serif;
+    background-color: #28004F;
 }
 
 h3 {
-    font-size: .85rem;
+    font-size: 1.2rem;
+    color: black;
 }
 
 p {
