--- a/componentes/container-produto-grid/container-produto-grid.css
+++ b/componentes/container-produto-grid/container-produto-grid.css
@@ -2,7 +2,7 @@
     align-items: center;
     background-color: #766289;
     color: #EFEFEF;
-    border-radius: 2%;
+    border-radius: 8px;
 }
 
 h3 {
@@ -28,4 +28,102 @@ h3 {
     background-color: #28004F;
     width: 100%;
     border-width: .4vh;
+}
+
+
+
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) { 
+    h3 {
+        font-size: .7rem;
+    }
+    .promocao-de-preco{
+        font-size: .6rem;
+    }
+    
+    .preco {
+        font-size: .8rem;
+    }
+    
+    .card-linha {
+        background-color: #28004F;
+        width: 100%;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+    h3 {
+        font-size: .7rem;
+    }
+    .promocao-de-preco{
+        font-size: .6rem;
+    }
+    
+    .preco {
+        font-size: .8rem;
+    }
+    
+    .card-linha {
+        background-color: #28004F;
+        width: 100%;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    h3 {
+        font-size: .8rem;
+    }
+    .promocao-de-preco{
+        font-size: .7rem;
+    }
+    
+    .preco {
+        font-size: .9rem;
+    }
+    
+    .card-linha {
+        background-color: #28004F;
+        width: 100%;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    h3 {
+        font-size: .8rem;
+    }
+    .promocao-de-preco{
+        font-size: .7em;
+    }
+    
+    .preco {
+        font-size: .9rem;
+    }
+    
+    .card-linha {
+        background-color: #28004F;
+        width: 100%;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+    h3 {
+        font-size: .9rem;
+    }
+    .promocao-de-preco{
+        font-size: .8rem;
+    }
+    
+    .preco {
+        font-size: 1rem;
+    }
+    
+    .card-linha {
+        background-color: #28004F;
+        width: 100%;
+    }
 }
