Finalização do carousel de produtos

--- a/componentes/carrousel-produtos/carrousel-produtos.css
+++ b/componentes/carrousel-produtos/carrousel-produtos.css
@@ -1,8 +1,7 @@
 .cards-produtos {
-    /* display: flex !important; */
-    flex-wrap: nowrap;
-    width: 100vw;
+    display: flex !important;
     justify-content: center;
+    flex-wrap: nowrap;
 }
 
 
