--- a/componentes/botoes/botoes.css
+++ b/componentes/botoes/botoes.css
@@ -7,10 +7,11 @@
     color: #EFEFEF;
 } 
 
+/* Hover */
 .btn-mvp:hover, .btn-mvp:focus-within {
     box-shadow: none !important;  
     transition: 0.5s;
-    background-color: #28004F !important; /* ALTERAR O BACKGROUND-COLOR SE ADICIONAR EM UMA DIV COM COR DIFERENTE DE #181818  */
+    background-color: transparent !important; 
     color: #FD4712 !important;
     border-color: #FD4712 !important;
     border-width: 2px;
@@ -24,5 +25,6 @@
 
 /* Estilo dos botões secundários */
 .btn-secundario-mvp {
+    background-color: transparent !important;
     border-color: #FD4712;
 }
