Atualização da tela de pagamentos e dashboard clientes, e exclusão da pasta icones

--- a/css/dashboardcliente.css
+++ b/css/dashboardcliente.css
@@ -67,6 +67,7 @@ body{
     height:80px;
 }
 
+/* inicio containers */
 .titulo-div{
     font-size: 16px;
     margin:20px 0;
@@ -96,3 +97,5 @@ body{
     border-color: #FD4712 !important;
     border-width: 2px;
 }
+
+/* inicio containers */
