Finalização da página do carrinho, com inserção do header. Padronização e ajustes na responsividade do header

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,8 @@ body {
     font-family: 'Saira', sans-serif;
     background-color: #28004F;
     color: #EFEFEF;
+    padding: 0;
+    margin: 0;
 }
 
 h2 {
