--- a/componentes/botoes/botoes.css
+++ b/componentes/botoes/botoes.css
@@ -8,7 +8,7 @@
 } 
 
 /* Hover */
-.btn-mvp:hover, .btn-mvp:focus-within {
+.btn-mvp:hover, .btn-mvp a:hover, .btn-mvp:focus, .btn-mvp a:focus-within {
     box-shadow: none !important;  
     transition: 0.5s;
     background-color: transparent !important; 
