--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -10,6 +10,7 @@
 .container-carrinho {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .container-itens {
@@ -29,6 +30,7 @@
 
 h3, a {
     color: #EFEFEF !important;
+    text-decoration: none;
 }
 
 .text-muted {
@@ -55,7 +57,6 @@ tbody{
 .item {
     border-bottom: 1px solid #EFEFEF !important;
     border-top: 1px solid #EFEFEF !important;
-
 }
 
 .item th{
