--- a/componentes/header/header.css
+++ b/componentes/header/header.css
@@ -31,6 +31,7 @@
 
 .btn-login {
     margin-right: 3vw;
+    font-size: 10px;
 }
 
 /* MEDIAS QUERIES  */
@@ -61,6 +62,11 @@
 
     .btn-login {
         margin-right: 3vw;
+        font-size: 10px !important;
+    }
+
+    .btn-cadastrar {
+        font-size: 10px !important;
     }
 }
 
@@ -90,12 +96,26 @@
 
     .btn-login {
         margin-right: 3vw;
+        font-size: 13px !important;
     }
+
+    .btn-cadastrar {
+        font-size: 13px !important;
+    }
+    
 }
+
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) { 
+    .btn-login {
+        margin-right: 3vw;
+        font-size: 13px !important;
+    }
 
+    .btn-cadastrar {
+        font-size: 13px !important;
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
