Inclusão de home nas paginas: dash,pagamento e carrinho

--- a/css/dashboardcliente.css
+++ b/css/dashboardcliente.css
@@ -7,6 +7,7 @@ body{
     background-color: #EFEFEF;
     color: #000000;
     font-size: 14px;
+    margin-top:16px;
 }
 
 .nav-dashboard .link-pagamento{
