--- a/componentes/botoes/botoes.css
+++ b/componentes/botoes/botoes.css
@@ -25,6 +25,6 @@
 
 /* Estilo dos botões secundários */
 .btn-secundario-mvp {
-    background-color: transparent !important;
+    background-color: #FD4712 !important;
     border-color: #FD4712;
 }
