--- a/css/home.css
+++ b/css/home.css
@@ -1,30 +1,6 @@
-.link-cadastro {
-    text-decoration: none;
-}
-
-.titulo-banner {
-    background-color: #FD4712 !important;
-}
 
 .card-produto-mvp {
     background-color: #efefef4f;
-    color:black;
-}
-
-.links-menu {
-    text-decoration: none;
-    color:black;
-}
-
-.links-menu:hover {
-    color: #FD4712 ;
-}
-
-.titulo-menu {
-    color: #FD4712;
-}
-
-.link-header {
-    text-decoration: none;
+    color: #c4c4c4;
 }
 
