Correções no carousel de banner e de produto, ajuste no header (input e redução do tamanho dos ícones), inclusão de shortcut icon e title em todas as páginas existentes, correções na página do carrinho, atualização dos html dos componenetes de banner, header e modal-login.

--- a/componentes/header/header.css
+++ b/componentes/header/header.css
@@ -47,6 +47,27 @@
     color:#FD4712 !important;
 }
 
+.link-header img {
+    width: auto;
+    height: 3.5vh;
+}
+
+.link-header{
+    color:black;
+}
+.link-header:hover{
+    color:#FD4712;
+}
+
+.nav-principal{
+    background-color: #EFEFEF;
+}
+
+.botoes-header-d-flex{
+    display:flex;
+    flex-wrap: nowrap;
+}
+
 /* MEDIAS QUERIES  */
 
 /* Extra small devices (portrait phones, less than 576px) */
