--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -1,15 +1,21 @@
 /* Início da listagem dos produtos no carrinho */
+.container-principal-carrinho a, 
+.container-principal-carrinho td {
+    text-decoration: none;
+    color: #EFEFEF;
+}
+
 .carrinho {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     background-color: #766289;
     border-radius: 8px;
-    justify-content: space-between;
 }
 
 .container-carrinho {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
 }
 
 .container-itens {
@@ -21,15 +27,10 @@
 
 .titulo-carrinho {
     color: #28004F;
-    font-size: 1.1rem;
+    font-size: .9rem;
     text-align: center;
     font-weight: 500;
     text-transform: uppercase;
-}
-
-h3, a {
-    color: #EFEFEF !important;
-    text-decoration: none;
 }
 
 .text-muted {
@@ -44,13 +45,14 @@ h3 {
     text-transform: uppercase;
 }
 
-a:hover {
+/* a:hover {
     color:#28004F !important;
     text-decoration: none;
-}
+} */
 
 tbody{
     width: 100%;
+    margin: auto;
 }
 
 .item {
@@ -94,7 +96,7 @@ tbody{
 }
 
 .cupom-titulo p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 500;
     text-align: left;
     color: #28004F;
@@ -121,6 +123,7 @@ tbody{
     border: 2px solid #28004F;
     border-radius: 4px;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .pagamento p {
