--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+textarea:focus, input:focus, select:focus {
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+} 
+
 body {
     font-family: 'Saira', sans-serif;
     background-color: #28004F;
