--- a/componentes/banners/banners.css
+++ b/componentes/banners/banners.css
@@ -2,7 +2,7 @@
     overflow: hidden;
     margin-bottom: 5vh;
     height: 70vh;
-    box-shadow: 5px 4px 1px #FD4712;
+    box-shadow: -5vw 5px 1px #FD4712;
 }
 
 .titulo-banner-img {
